changed heading-text id to a header for semantic reasons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav>
         <span id="left"><a href="#">home</a></span>
         <span id="right"><a href="#">shark biscuits</a> | <a href="#">shark training
@@ -19,13 +20,13 @@
 
 
     <!-- container -->
-    <div style="width: 100%; margin-left: auto; margin-right: auto;">
+    <main>
 
-        <div id="heading-text">
+        <header>
             <h2>Care and Feeding of Tiger Sharks</h2>
             <p>Tiger sharks grow only to 15 feet, so they are much better suited as pet sharks for kids under the age of
                 12.</p>
-        </div>
+        </header>
 
         <div id="shark-div">
             <h1 id="sharksemester">Shark Semester!</h1>
@@ -135,7 +136,7 @@
             </div>
         </div>
 
-    </div>
+    </main>
 
 
     <div id="video">
