fix typo in style.css line 96, in which the shark-hero-text was not rendering correctly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shark Care Guide for Kids</title>
-    <link href='http://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Creepster" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,21 +15,19 @@
         <span id="left"><a href="#">home</a></span>
         <span id="right"><a href="#">shark biscuits</a> | <a href="#">shark training
                 leashes</a></span>
-        </nav>
+    </nav>
 
-
-
-    <!-- container -->
     <main>
-
+        <!-- Header Section -->
         <header>
             <h2>Care and Feeding of Tiger Sharks</h2>
             <p>Tiger sharks grow only to 15 feet, so they are much better suited as pet sharks for kids under the age of
                 12.</p>
         </header>
 
-        <div id="shark-div">
-            <h1 id="sharksemester">Shark Semester!</h1>
+        <!-- Hero Section -->
+        <div id="hero">
+            <h1 id="shark-hero-text">Shark Semester!</h1>
         </div>
 
 
