changed an id name

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h1 id="shark-hero-text">Shark Semester!</h1>
         </div>
 
-
-        <div id="bottomcontainer">
+        <!-- Info Section -->
+        <section id="info-container">
 
             <div id="leftside">
                 <h2>Shark Maintenance Training Videos</h2>
@@ -95,7 +95,7 @@
                 </ol>
             </div>
 
-        </div>
+        </section>
 
 
         <!-- not sure if I will use this.-->
