tried to correct staff section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
              </div>
         -->
 
-        <div class="container">
-            <div class="txt-container">
+        <!-- Staff Section -->
+        <div id="staff-container">
+            <div id="text-container">
                 <h2>Meet the Team</h2>
                 <p>Meet Reuben, the seasoned shark whisperer with over a decade of experience in the captivating world
                     of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
