--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 
         </section>
 
-        <!-- Staff Section -->
-        <div id="staff-container">
-            <div id="text-container">
+        <!-- OLD STYLE -->
+        <div id="css-table">
+
+            <div style="display: table-cell; vertical-align: top; text-align: left; width: 60%; padding: 10px;">
                 <h2>Meet the Team</h2>
                 <p>Meet Reuben, the seasoned shark whisperer with over a decade of experience in the captivating world
                     of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
@@ -113,11 +114,39 @@
                     awe-inspiring training sessions, Reuben's commitment to the conservation and understanding of sharks
                     remains unwavering, inspiring future generations to explore and protect our marine ecosystems.</p>
             </div>
-            <div class="img-container">
-                <img src="reuben-on-algave-dock.jpg" alt="Reuben in Algave">
+
+            <div style="display: table-cell; vertical-align: top; text-align: left; padding: 10px;">
+                <img width="80%" src="reuben-on-algave-dock.jpg" alt="Reuben in Algave">
             </div>
+
         </div>
 
+
+
+
+        <!-- Staff Section -->
+        <!--
+        <section id="staff-container">
+
+            <div id="left">
+                <h2>Meet the Team</h2>
+                <p>Meet Reuben, the seasoned shark whisperer with over a decade of experience in the captivating world
+                    of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
+                    Reuben's journey has been a testament to his unwavering passion for these enigmatic creatures. With
+                    a keen eye and a fearless spirit, he has delved into the mysteries of shark behavior, dedicating
+                    himself to unraveling their secrets and ensuring their well-being.</p>
+                <p>Reuben's expertise extends far beyond the confines of textbooks, as his hands-on approach has led him
+                    to forge deep connections with the ocean's apex predators. Through years of patient observation and
+                    meticulous care, he has become a trusted guardian of the seas, earning the respect of both his peers
+                    and his finned companions. Whether it's conducting groundbreaking research or orchestrating
+                    awe-inspiring training sessions, Reuben's commitment to the conservation and understanding of sharks
+                    remains unwavering, inspiring future generations to explore and protect our marine ecosystems.</p>
+            </div>
+            <div id="right">
+                <img src="reuben-on-algave-dock.jpg" alt="Reuben in Algave">
+            </div>
+        </section>
+-->
     </main>
 
 
