refined my sections

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
 
         <!-- Info Section -->
-        <section id="info-container">
+        <section class="info-container">
 
-            <div id="leftside">
+            <div class="leftside">
                 <h2>Shark Maintenance Training Videos</h2>
                 <p>Shark maintenance training videos offer invaluable insights into the care and management of these
                     magnificent creatures within aquariums and marine parks. These videos serve as essential resources
@@ -57,7 +57,7 @@
                     practices, ultimately contributing to the conservation of these remarkable animals.</p>
             </div>
 
-            <div id="rightside">
+            <div class="rightside">
                 <h2>Fun Facts about Tiger Sharks</h2>
                 <ol>
                     <li><span class="bold">Distinctive Appearance:</span> Tiger sharks get their name from the dark,
@@ -97,10 +97,9 @@
 
         </section>
 
-        <!-- OLD STYLE -->
-        <div id="css-table">
+        <section id="info-container">
 
-            <div style="display: table-cell; vertical-align: top; text-align: left; width: 60%; padding: 10px;">
+            <div id="leftside">
                 <h2>Meet the Team</h2>
                 <p>Meet Reuben, the seasoned shark whisperer with over a decade of experience in the captivating world
                     of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
@@ -114,55 +113,33 @@
                     awe-inspiring training sessions, Reuben's commitment to the conservation and understanding of sharks
                     remains unwavering, inspiring future generations to explore and protect our marine ecosystems.</p>
             </div>
-
-            <div style="display: table-cell; vertical-align: top; text-align: left; padding: 10px;">
-                <img width="80%" src="reuben-on-algave-dock.jpg" alt="Reuben in Algave">
+            <div id="rightside">
+                <img src="reuben-on-algave-dock.jpg" alt="Reuben">
             </div>
 
-        </div>
-
-
-
-
-        <!-- Staff Section -->
-        <!--
-        <section id="staff-container">
-
-            <div id="left">
-                <h2>Meet the Team</h2>
-                <p>Meet Reuben, the seasoned shark whisperer with over a decade of experience in the captivating world
-                    of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
-                    Reuben's journey has been a testament to his unwavering passion for these enigmatic creatures. With
-                    a keen eye and a fearless spirit, he has delved into the mysteries of shark behavior, dedicating
-                    himself to unraveling their secrets and ensuring their well-being.</p>
-                <p>Reuben's expertise extends far beyond the confines of textbooks, as his hands-on approach has led him
-                    to forge deep connections with the ocean's apex predators. Through years of patient observation and
-                    meticulous care, he has become a trusted guardian of the seas, earning the respect of both his peers
-                    and his finned companions. Whether it's conducting groundbreaking research or orchestrating
-                    awe-inspiring training sessions, Reuben's commitment to the conservation and understanding of sharks
-                    remains unwavering, inspiring future generations to explore and protect our marine ecosystems.</p>
+            <div id="leftside2">
+                <img src="shark-trainer.jpg" alt="Lee">
             </div>
-            <div id="right">
-                <img src="reuben-on-algave-dock.jpg" alt="Reuben in Algave">
+            <div id="rightside2">
+                <p>Lee is a dedicated tiger shark trainer with a passion for marine conservation and education. With over five years of hands-on experience in the field, Lee has honed his skills in shark behavior, training, and husbandry. His journey began with a profound love for the ocean and its inhabitants, driving him to pursue a career dedicated to understanding and protecting these magnificent creatures.</p>
+                <p>Throughout his career, Lee has worked tirelessly to foster positive relationships between humans and sharks, emphasizing the importance of conservation and coexistence. Through his expertise and commitment, Lee not only enriches the lives of the tiger sharks under his care but also inspires others to appreciate and respect these apex predators. With a blend of compassion, knowledge, and determination, Lee continues to make a profound impact on shark conservation efforts, ensuring a brighter future for both sharks and the marine ecosystems they inhabit.</p>
             </div>
         </section>
--->
+
+        <!------- VIDEO ------->
+
+        <div id="video">
+            <video controls>
+                <source src="shark-attacks.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+
+            <h3 style="margin-top: 25px;">Shark owners with their pet tiger sharks - at a local shark-park.</h3>
+        </div>
+
     </main>
+        <div id="pagefooter">All shark's rights reserved.</div>
 
-
-    <div id="video">
-        <video controls>
-            <source src="shark-attacks.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-
-        <h3 style="margin-top: 25px;">Shark owners with their pet tiger sharks - at a local shark-park.</h3>
-    </div>
-
-
-    <div id="pagefooter">All shark's rights reserved.</div>
-
-    </div>
 </body>
 
 </html>
