--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
 
     </main>
-        <div id="pagefooter">All shark's rights reserved.</div>
+        <footer>All shark's rights reserved.</footer>
 
 </body>
 
