--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <div id="leftside">
                 <h2>Meet the Team</h2>
-                <p>Meet Reuben, the seasoned shark whisperer with over a decade of experience in the captivating world
+                <p>Meet <em>Reuben</em>, the seasoned shark whisperer with over a decade of experience in the captivating world
                     of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
                     Reuben's journey has been a testament to his unwavering passion for these enigmatic creatures. With
                     a keen eye and a fearless spirit, he has delved into the mysteries of shark behavior, dedicating
@@ -121,8 +121,17 @@
                 <img src="shark-trainer.jpg" alt="Lee">
             </div>
             <div id="rightside2">
-                <p>Lee is a dedicated tiger shark trainer with a passion for marine conservation and education. With over five years of hands-on experience in the field, Lee has honed his skills in shark behavior, training, and husbandry. His journey began with a profound love for the ocean and its inhabitants, driving him to pursue a career dedicated to understanding and protecting these magnificent creatures.</p>
-                <p>Throughout his career, Lee has worked tirelessly to foster positive relationships between humans and sharks, emphasizing the importance of conservation and coexistence. Through his expertise and commitment, Lee not only enriches the lives of the tiger sharks under his care but also inspires others to appreciate and respect these apex predators. With a blend of compassion, knowledge, and determination, Lee continues to make a profound impact on shark conservation efforts, ensuring a brighter future for both sharks and the marine ecosystems they inhabit.</p>
+                <p><em>Lee</em> is a dedicated tiger shark trainer with a passion for marine conservation and education. With
+                    over five years of hands-on experience in the field, Lee has honed his skills in shark behavior,
+                    training, and husbandry. His journey began with a profound love for the ocean and its inhabitants,
+                    driving him to pursue a career dedicated to understanding and protecting these magnificent
+                    creatures.</p>
+                <p>Throughout his career, Lee has worked tirelessly to foster positive relationships between humans and
+                    sharks, emphasizing the importance of conservation and coexistence. Through his expertise and
+                    commitment, Lee not only enriches the lives of the tiger sharks under his care but also inspires
+                    others to appreciate and respect these apex predators. With a blend of compassion, knowledge, and
+                    determination, Lee continues to make a profound impact on shark conservation efforts, ensuring a
+                    brighter future for both sharks and the marine ecosystems they inhabit.</p>
             </div>
         </section>
 
@@ -138,7 +147,7 @@
         </div>
 
     </main>
-        <footer>All shark's rights reserved.</footer>
+    <footer>All shark's rights reserved.</footer>
 
 </body>
 
