made the li's bold, highlighted staff names and updated the readme image

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                     for aquarists, trainers, and marine biologists, providing detailed instructions on various aspects
                     of shark care, including feeding, habitat maintenance, behavioral training, and veterinary
                     procedures. By documenting best practices and innovative techniques, these videos contribute to the
-                    advancement of shark husbandry and welfare standards worldwide.</p>
+                    advancement of shark husbandry and welfare standards worldwide.</p><br>
                 <p>One key focus of shark maintenance training videos is behavioral conditioning, which involves
                     training sharks to participate willingly in routine health checks and medical procedures. Through
                     positive reinforcement techniques such as target training and operant conditioning, trainers can
                     encourage desirable behaviors while minimizing stress for the animals. These videos often showcase
                     the step-by-step process of training sessions, highlighting the bond between trainers and sharks and
-                    demonstrating the effectiveness of positive reinforcement in shaping behavior.</p>
+                    demonstrating the effectiveness of positive reinforcement in shaping behavior.</p><br>
                 <p>Additionally, shark maintenance training videos often emphasize the importance of environmental
                     enrichment to promote the physical and mental well-being of captive sharks. Enrichment activities,
                     such as novel feeding techniques, interactive toys, and simulated natural behaviors, help prevent
@@ -62,32 +62,32 @@
                 <ol>
                     <li><span class="bold">Distinctive Appearance:</span> Tiger sharks get their name from the dark,
                         vertical stripes found on their bodies, somewhat resembling a tiger's stripes. These stripes
-                        fade as they mature, but they're quite striking when the sharks are young.</li>
+                        fade as they mature, but they're quite striking when the sharks are young.</li><br>
                     <li><span class="bold">Large Size:</span> They are one of the largest shark species, with adults
                         typically ranging from 10 to 14 feet in length. Some individuals can grow even larger, reaching
-                        lengths of up to 18 feet.</li>
+                        lengths of up to 18 feet.</li><br>
                     <li><span class="bold">Varied Diet:</span> Tiger sharks are often referred to as the "garbage cans
                         of the sea" due to their voracious appetite and tendency to eat almost anything. Their diet
                         includes fish, sea turtles, seabirds, dolphins, and even other sharks. They've been known to
-                        consume non-food items such as tires, license plates, and pieces of coal.</li>
+                        consume non-food items such as tires, license plates, and pieces of coal.</li><br>
                     <li><span class="bold">Amazing Sense of Smell:</span> Tiger sharks have an exceptional sense of
                         smell, even better than some other shark species. They can detect prey from great distances
-                        using their highly sensitive nostrils.</li>
+                        using their highly sensitive nostrils.</li><br>
                     <li><span class="bold">Wide Distribution:</span> These sharks are found in tropical and temperate
                         waters around the world, inhabiting coastal areas, reefs, and the open ocean. They are commonly
-                        seen in the Atlantic, Pacific, and Indian Oceans.</li>
+                        seen in the Atlantic, Pacific, and Indian Oceans.</li><br>
                     <li><span class="bold">Nocturnal Hunters:</span> While they can be active during the day, tiger
                         sharks are primarily nocturnal hunters. They often cruise near the ocean floor at night in
-                        search of prey, using their excellent senses to locate food in low light conditions.</li>
+                        search of prey, using their excellent senses to locate food in low light conditions.</li><br>
                     <li><span class="bold">Impressive Speed and Agility:</span> Despite their bulky appearance, tiger
                         sharks are agile swimmers capable of bursts of speed when hunting. They can reach speeds of up
-                        to 20-30 miles per hour (32-48 km/h) when chasing prey.</li>
+                        to 20-30 miles per hour (32-48 km/h) when chasing prey.</li><br>
                     <li><span class="bold">Long Lifespan:</span> Tiger sharks have relatively long lifespans compared to
-                        other shark species, with some individuals living up to 30 years or more in the wild.</li>
+                        other shark species, with some individuals living up to 30 years or more in the wild.</li><br>
                     <li><span class="bold">Reproduction:</span> Like many sharks, tiger sharks are slow to reach sexual
                         maturity and have relatively low reproductive rates. Females give birth to live young after a
                         gestation period of around 14-16 months, with litter sizes typically ranging from 10 to 80 pups.
-                    </li>
+                    </li><br>
                     <li><span class="bold">Conservation Concerns:</span> While not currently listed as endangered, tiger
                         sharks face various threats including overfishing, habitat degradation, and accidental bycatch
                         in fishing gear. Conservation efforts are underway to better understand and protect these
@@ -101,7 +101,7 @@
 
             <div id="leftside">
                 <h2>Meet the Team</h2>
-                <p>Meet <em>Reuben</em>, the seasoned shark whisperer with over a decade of experience in the captivating world
+                <p>Meet <span style="background-color: yellow;"><em>Reuben</em></span>, the seasoned shark whisperer with over a decade of experience in the captivating world
                     of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
                     Reuben's journey has been a testament to his unwavering passion for these enigmatic creatures. With
                     a keen eye and a fearless spirit, he has delved into the mysteries of shark behavior, dedicating
@@ -121,7 +121,7 @@
                 <img src="shark-trainer.jpg" alt="Lee">
             </div>
             <div id="rightside2">
-                <p><em>Lee</em> is a dedicated tiger shark trainer with a passion for marine conservation and education. With
+                <p><span style="background-color: yellow;"><em>Lee</em></span> is a dedicated tiger shark trainer with a passion for marine conservation and education. With
                     over five years of hands-on experience in the field, Lee has honed his skills in shark behavior,
                     training, and husbandry. His journey began with a profound love for the ocean and its inhabitants,
                     driving him to pursue a career dedicated to understanding and protecting these magnificent
