added a border bottom to push it down a little

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     remains unwavering, inspiring future generations to explore and protect our marine ecosystems.</p>
             </div>
             <div id="rightside">
-                <img src="reuben-on-algave-dock.jpg" alt="Reuben">
+                <img id="reuben" src="reuben-on-algave-dock.jpg" alt="Reuben">
             </div>
 
             <div id="leftside2">
