done some more tweeks

--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
             </div>
 
         </section>
+        <hr>
 
         <section id="info-container">
-
             <div id="leftside">
                 <h2>Meet the Team</h2>
-                <p>Meet <span style="background-color: yellow;"><em>Reuben</em></span>, the seasoned shark whisperer with over a decade of experience in the captivating world
+                <p>Meet <span style="background-color: yellow;"><em>Reuben</em></span>, the seasoned shark whisperer
+                    with over a decade of experience in the captivating world
                     of marine biology. From the azure depths of the Pacific to the coral reefs of the Caribbean,
                     Reuben's journey has been a testament to his unwavering passion for these enigmatic creatures. With
                     a keen eye and a fearless spirit, he has delved into the mysteries of shark behavior, dedicating
@@ -121,7 +122,8 @@
                 <img src="shark-trainer.jpg" alt="Lee">
             </div>
             <div id="rightside2">
-                <p><span style="background-color: yellow;"><em>Lee</em></span> is a dedicated tiger shark trainer with a passion for marine conservation and education. With
+                <p><span style="background-color: yellow;"><em>Lee</em></span> is a dedicated tiger shark trainer with a
+                    passion for marine conservation and education. With
                     over five years of hands-on experience in the field, Lee has honed his skills in shark behavior,
                     training, and husbandry. His journey began with a profound love for the ocean and its inhabitants,
                     driving him to pursue a career dedicated to understanding and protecting these magnificent
@@ -134,6 +136,7 @@
                     brighter future for both sharks and the marine ecosystems they inhabit.</p>
             </div>
         </section>
+        <hr>
 
         <!------- VIDEO ------->
 
@@ -143,7 +146,8 @@
                 Your browser does not support the video tag.
             </video>
 
-            <h3 style="margin-top: 25px;">Shark owners with their pet tiger sharks - at a local shark-park.</h3>
+            <h3 style="margin-top: 25px; text-transform: uppercase;">Shark owners with their pet tiger sharks - at a
+                local shark-park.</h3>
         </div>
 
     </main>
