--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     brighter future for both sharks and the marine ecosystems they inhabit.</p>
             </div>
         </section>
-        <hr>
+        <hr id="last-hr">
 
         <!------- VIDEO ------->
 
@@ -146,7 +146,7 @@
                 Your browser does not support the video tag.
             </video>
 
-            <h3 style="margin-top: 25px; text-transform: uppercase;">Shark owners with their pet tiger sharks - at a
+            <h3 style="margin-top: 80px; text-transform: uppercase;">Shark owners with their pet tiger sharks - at a
                 local shark-park.</h3>
         </div>
 
