added and edited comments for html validation

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         </section>
         <hr>
 
+        <!-- Staff Team Section -->
         <section id="info-container">
             <div id="leftside">
                 <h2>Meet the Team</h2>
@@ -140,7 +141,7 @@
         </section>
         <hr id="last-hr">
 
-        <!------- VIDEO ------->
+        <!-- Video -->
 
         <div id="video">
             <video controls>
